# athena-cli

./: .gitignore  README.md  pyproject.toml  table_definitions.example.yaml
src/athena_cli/: __init__.py  athena_client.py  cli.py  ddl.py  diff.py  discovery.py  infer.py  schema.py  types.py
tests/: test_ddl.py  test_schema.py  test_types.py
